--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,12 +37,13 @@ jobs:
       env:
         GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
       run: |
-        echo "$GCP_SERVICE_ACCOUNT_KEY" > GCP_Account_Key.json
+        echo "$GCP_SERVICE_ACCOUNT_KEY" > data-pipeline/GCP_Account_Key.json
     
     - name: Run ${{ matrix.test-suite }} tests
+      working-directory: data-pipeline
       run: |
         pytest test/test_data_${{ matrix.test-suite }}.py -v --tb=short
     
     - name: Clean up
       if: always()
-      run: rm -f GCP_Account_Key.json
+      run: rm -f data-pipeline/GCP_Account_Key.json
