--- a/.github/workflows/deploy-agent.yml
+++ b/.github/workflows/deploy-agent.yml
@@ -14,19 +14,25 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Create GCP key file
+    # -----------------------------
+    # Write secrets inside the build folder
+    # -----------------------------
+    - name: Set up GCP key
       run: |
-        echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > GCP_Account_Key.json
+        echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > model-pipeline/llm-agent/GCP_Account_Key.json
 
-    - name: Create .env file
+    - name: Set up .env
       run: |
-        echo "${{ secrets.ENV_FILE }}" > .env
+        echo "${{ secrets.ENV_FILE }}" > model-pipeline/llm-agent/.env
 
+    # -----------------------------
+    # Authenticate and set up gcloud
+    # -----------------------------
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
@@ -38,16 +44,24 @@ jobs:
     - name: Configure Docker for GCR
       run: gcloud auth configure-docker
 
+    # -----------------------------
+    # Build and push Docker image
+    # -----------------------------
     - name: Build Docker image (LLM Agent)
+      working-directory: model-pipeline/llm-agent
       run: |
-        docker build -t gcr.io/homiehub/homiehub-llm-agent-api:${{ github.sha }} ./model-pipeline/llm-agent
+        docker build -t gcr.io/homiehub/homiehub-llm-agent-api:${{ github.sha }} .
         docker tag gcr.io/homiehub/homiehub-llm-agent-api:${{ github.sha }} gcr.io/homiehub/homiehub-llm-agent-api:latest
 
-    - name: Push to GCR
+    - name: Push Docker image to GCR
+      working-directory: model-pipeline/llm-agent
       run: |
         docker push gcr.io/homiehub/homiehub-llm-agent-api:${{ github.sha }}
         docker push gcr.io/homiehub/homiehub-llm-agent-api:latest
 
+    # -----------------------------
+    # Deploy to Cloud Run
+    # -----------------------------
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy homiehub-llm-agent-api \
@@ -60,8 +74,11 @@ jobs:
           --cpu 2 \
           --timeout 300
 
+    # -----------------------------
+    # Clean up secrets
+    # -----------------------------
     - name: Cleanup sensitive files
       if: always()
       run: |
-        rm -f GCP_Account_Key.json
-        rm -f .env
+        rm -f model-pipeline/llm-agent/GCP_Account_Key.json
+        rm -f model-pipeline/llm-agent/.env
